- Adição do TabsPagerAdapter para poder fazer o swipe entre a tela de investimento e de contato - Adição da classe UIGeneratorContato que cria a view necessária dimicamente com os parâmetros da classe Cell

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">EasynvestTest</string>
+    <string name="app_name">Easynvest Test</string>
+    <string name="investimento">Investimento</string>
+    <string name="contato">Contato</string>
 </resources>
