- Adição da biblioteca Calligraphy para poder aplicar um padrão de fonte para todo o app - Adição das classes para salvar o SharedPreferences com o objetivo de mudar da tela de Contato para Sucesso e vice versa - Criação do BaseFragment para poder ser extendido por Fragments que possuem comportamentos em comum - Adição de outras validações - Adição do FragmentSucesso

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Easynvest Test</string>
     <string name="investimento">Investimento</string>
     <string name="contato">Contato</string>
+
+    <string name="email_invalido">Digite um email válido</string>
+    <string name="telefone_invalido">Digite um telefone válido</string>
 </resources>
