- Adição da biblioteca MPAndroidChart para construir o gráfico - Adição do gráfico e de outros elementos na tela de investimento - Adição da classe UIGeneratorInvestimento que provê funções para gerar a UI dinamicamente

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,15 @@
     <string name="investimento">Investimento</string>
     <string name="contato">Contato</string>
 
+    <!-- Validation -->
     <string name="email_invalido">Digite um email válido</string>
     <string name="telefone_invalido">Digite um telefone válido</string>
+
+    <!-- Informações sobre investimento -->
+    <string name="fundo">Fundo</string>
+    <string name="cdi">CDI</string>
+    <string name="no_mes">No mês</string>
+    <string name="no_ano">No ano</string>
+    <string name="doze_meses">12 meses</string>
+
 </resources>
